--- a/src/app/controls/navigation-menu/navigation-menu.component.css
+++ b/src/app/controls/navigation-menu/navigation-menu.component.css
@@ -1,6 +1,17 @@
 .toolbar-filler {
     flex: 1;
 }
-md-toolbar {
-    margin-bottom: 25px;
+
+
+.example-header-image {
+  background-image: url('https://material.angular.io/shiba1.d84e1a8ed94377452dbf.jpg');
+  background-size: cover;
+}
+.circle img {
+	border-radius: 50%;	/* relative value for
+				   adjustable image size */
+}
+.circle {
+    display: inline-flex;
+    padding-right: 3px;
 }
