--- a/src/app/pages/student-page/student-page.component.html
+++ b/src/app/pages/student-page/student-page.component.html
@@ -1,3 +1,21 @@
-<p>
-  student-page works!
-</p>
+<md-sidenav-container class="example-container">
+  <md-sidenav #sidenav mode="side" class="example-sidenav" [opened]="leftNavIsOpen">
+    <div fxLayout="column">
+      <button (click)="leftNavIsOpen = !leftNavIsOpen" md-button color="accent">
+        <md-icon>chevron_left</md-icon>
+      </button>
+     <button md-button>Portfolio</button>
+      <button md-button>Courses</button>
+    </div>
+  </md-sidenav>
+  <div fxLayout="row">
+    <button color="accent" *ngIf="!leftNavIsOpen" md-button (click)="leftNavIsOpen = !leftNavIsOpen">
+      <md-icon>chevron_right</md-icon>
+    </button>
+    
+  </div>
+  <div class="example-sidenav-content">
+   
+  </div>
+
+</md-sidenav-container>
