--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik');
 body {
     margin: 0;
     //background-color: green;
+    font-family: 'Rubik', sans-serif !important;
 }
+
+
+
