Added loading screen; portfolio scaffolding

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,3 +1,4 @@
+<div class="margin-md-top">
 <div fxLayout="row" fxLayoutAlign="center center" >
 
   LOGO HERE
@@ -22,6 +23,7 @@
   <button md-raised-button [fxFlex.xs]="flexSettings.xs" [fxFlex.gt-xs]="flexSettings.sm" color="primary">
   SIGN IN
   </button>
+</div>
 </div>
 
 
