--- a/src/app/pages/student-page/student-page.component.html
+++ b/src/app/pages/student-page/student-page.component.html
@@ -4,18 +4,19 @@
       <button (click)="leftNavIsOpen = !leftNavIsOpen" md-button color="accent">
         <md-icon>chevron_left</md-icon>
       </button>
-     <button md-button>Portfolio</button>
-      <button md-button>Courses</button>
+     <button md-button [routerLink]="['portfolio']">Portfolio</button>
+      <button [routerLink]="['course']" md-button>Courses</button>
     </div>
   </md-sidenav>
-  <div fxLayout="row">
+  <div fxLayout="row" style="position: absolute">
     <button color="accent" *ngIf="!leftNavIsOpen" md-button (click)="leftNavIsOpen = !leftNavIsOpen">
       <md-icon>chevron_right</md-icon>
     </button>
     
   </div>
-  <div class="example-sidenav-content">
-   
+  <div class="margin-sm-top" fxLayout="row" fxLayoutAlign="center center">
+    <router-outlet></router-outlet>
+    
   </div>
 
 </md-sidenav-container>
