--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -5,6 +5,9 @@ body {
     font-family: 'Rubik', sans-serif !important;
 }
 
+.margin-sm-top {
+    margin-top: 50px;
+}
 
 .margin-md-top {
     margin-top: 100px;
