--- a/src/app/pages/student-page/student-page.component.css
+++ b/src/app/pages/student-page/student-page.component.css
@@ -1,7 +1,5 @@
-.example-container {
-  /*width: 500px;
-  height: 300px;
-  border: 1px solid rgba(0, 0, 0, 0.5);*/
+
+/*.full-screen-side-nav {
   overflow-y: hidden;
   position: absolute;
   height: 100%;
@@ -19,4 +17,4 @@
 .example-sidenav {
   padding: 20px;
   overflow-y: hidden;
-}
+}*/
