--- a/src/app/controls/navigation-menu/navigation-menu.component.html
+++ b/src/app/controls/navigation-menu/navigation-menu.component.html
@@ -1,13 +1,13 @@
 <md-sidenav-container class="full-screen-side-nav">
   <md-sidenav #sidenav class="example-sidenav">
     <div fxLayout="column">
-      <button routerLink="/" md-button>Home</button>
-      <button routerLink="/login" md-button>Login</button>
-      <button routerLink="/student/1" md-button>Dashboard</button>
-      <button routerLink="/course/1" md-button>Courses</button>
+      <button routerLink="/" (click)="sidenav.close()" md-button>Home</button>
+      <button routerLink="/login" (click)="sidenav.close()" md-button>Login</button>
+      <button routerLink="/student/1" (click)="sidenav.close()" md-button>Dashboard</button>
+      <button routerLink="/course/1" (click)="sidenav.close()" md-button>Courses</button>
     </div>
   </md-sidenav>
-
+  <div class="main-content">
 <md-toolbar color="primary">
  
   <div fxLayout="row">
@@ -62,4 +62,5 @@
   </div>
 </md-toolbar>
 <router-outlet></router-outlet>
+</div>
 </md-sidenav-container>
