--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -35,3 +35,7 @@ body {
   padding: 20px !important;
   overflow-y: hidden !important;
 }
+
+.mat-sidenav-content {
+    overflow: hidden !important;
+}
